--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
     <string name="app_name">NASA-Images</string>
+    <string name="hello_world">Hello World</string>
+    <string name="button_text">I\'m a button!</string>
+    <string name="i_love_android">I love Android</string>
+    <string name="switch1">Switch on/off</string>
+    <string name="button1lab2">PRESS ME</string>
+    <string name="checkBox1lab2">Check this out!</string>
+    <string name="edittextLab2">I love Android</string>
+    <string name="toastMessage">Label has been updated</string>
+    <string name="snackBarMessage">The checkbox is now </string>
+    <string name="on"> on.</string>
+    <string name="off"> off.</string>
+    <string name="lab3_1">Enter your name</string>
+    <string name="lab3_1ButtonText">NEXT</string>
+    <string name="lab3_2">Welcome</string>
+    <string name="lab3_2ButtonText">DON\'T CALL ME THAT</string>
+    <string name="lab3_3ButtonText">THANK YOU</string>
+    <string name="l4_editText">Type Here</string>
+    <string name="l4_Switch">Urgent</string>
+    <string name="l4_Button">Add</string>
+    <string name="l4_alertTitle">Do you want to delete this?</string>
+    <string name="l4_message">They selected row is:</string>
+
 </resources>
