--- a/app/src/main/res/values-fr-rCA/strings.xml
+++ b/app/src/main/res/values-fr-rCA/strings.xml
@@ -1,27 +1,40 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">NASA Images</string>
+    <string name="app_name">NASA-Images</string>
     <string name="hello_world">Bonjour le monde</string>
     <string name="button_text">Je suis un bouton!</string>
-    <string name="i_love_android">J\'aime Androïd</string>
-    <string name="switch1">Allumer / éteindre</string>
-    <string name="button1lab2">APPUYEZ SUR MOI</string>
+    <string name="i_love_android">J\'adore Android</string>
+    <string name="switch1">Allumer/éteindre</string>
+    <string name="button1lab2">APPUIE SUR MOI</string>
     <string name="checkBox1lab2">Regarde ça!</string>
-    <string name="edittextLab2">J\'aime Androïd</string>
-    <string name="toastMessage">Le libellé a été mis à jour</string>
-    <string name="snackBarMessage">La case à cocher est maintenant </string>
-    <string name="on">activée.</string>
-    <string name="off">désactivée.</string>
-    <string name="open"> ouvrir</string>
-    <string name="close"> fermer</string>
+    <string name="edittextLab2">J\'adore Android</string>
+    <string name="toastMessage">L\'étiquette a été mise à jour</string>
+    <string name="snackBarMessage">La case est maintenant </string>
+    <string name="on">allumée.</string>
+    <string name="off">éteinte.</string>
+    <string name="open">ouvert</string>
+    <string name="close">fermé</string>
     <string name="lab3_1">Entrez votre nom</string>
     <string name="lab3_1ButtonText">SUIVANT</string>
     <string name="lab3_2">Bienvenue</string>
-    <string name="lab3_2ButtonText">NE M\'APPELLE PAS ÇA</string>
-    <string name="lab3_3ButtonText">JE VOUS REMERCIE</string>
-    <string name="l4_editText">Écrivez Ici</string>
-    <string name="l4_Switch">Urgente</string>
+    <string name="lab3_2ButtonText">NE M\'APPELLE PAS COMME CA</string>
+    <string name="lab3_3ButtonText">MERCI</string>
+    <string name="l4_editText">Taper ici</string>
+    <string name="l4_Switch">Urgent</string>
     <string name="l4_Button">Ajouter</string>
-    <string name="l4_alertTitle">Voulez-vous supprimer ceci?</string>
-    <string name="l4_message">Ils ont sélectionné la ligne:</string>
+    <string name="l4_alertTitle">Voulez-vous le supprimer?</string>
+    <string name="l4_message">La ligne sélectionnée est:</string>
+    <string name="title_activity_image_display">Affichage de l\'image</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">Premier fragment</string>
+    <string name="second_fragment_label">Deuxième fragment</string>
+    <string name="next">Suivant</string>
+    <string name="previous">Précédent</string>
+    <string name="hello_first_fragment">Bonjour premier fragment</string>
+    <string name="hello_second_fragment">Bonjour deuxième fragment. Arg: %1$s</string>
+    <string name="title_activity_empty">Activité vide</string>
+    <string name="hello_blank_fragment">Ceci est un fragment vide.</string>
+    <string name="save_toast">Votre image NASA a été enregistrée</string>
+    <string name="no_save">Votre image NASA n\'a pas été enregistrée!</string>
+    <string name="header_text">Comment utiliser l\'application!</string>
+    <string name="main_text">Commencez en cliquant sur le menu hamburger en haut à gaucheet en appuyant sur le bouton Accueil. Ensuite, appuyez sur le bouton "Choisir une date". L\'application vous proposera un calendrier pour sélectionner une date. Appuyez sur Rechercher après. Si vous aimez l\'image, appuyez sur Enregistrer! Vous pouvez consulter toutes vos images NASA enregistrées en cliquant sur le menu hamburger en haut à gauche et en appuyant sur "Images NASA". Vous pouvez ensuite trier vos images NASA enregistrées via la barre de recherche en bas. Si vous décidez que vous ne voulez plus d\'une image NASA enregistrée, vous pouvez cliquer sur le bouton "Supprimer" en bas à droite de la page.</string>
 </resources>
